# FlashBackClient

./: .clang-format  .clang-format-ignore  .clang-tidy  .cpplint  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  TODO.md  check-naming.py  install-dev.sh  install.sh  requirements-dev.txt  requirements.txt
.github/workflows/: cmake-multi-platform.yml  codeql-analysis.yml  codeql.yml
configs/flashbackclient/: flashbackclient.yaml
configs/flashbackclient/scheduler/: scheduler.yaml
configs/flashbackclient/targets/: example.yaml
docs/: CONFIGS.md
include/flashbackclient/: condition.h  configdefs.h  configs.h  defs.h  helper.h  license_info.h  listener.h  logger.h  rule.h  scheduler.h  service_locator.h  signal_handler.h  target.h  trigger.h
include/flashbackclient/logging/: crashfilesink.h  dualsink.h  logger.h
include/flashbackclient/managers/: rulemanager.h  settingmanager.h
src/: condition.cpp  configs.cpp  configs.h  dualsink.cpp  helper.cpp  logger.cpp  main.cpp  rule.cpp  scheduler.cpp  scheduler.h  signal_handler.cpp  target.cpp  target.h
src/listener/: platform_listener.h
src/listener/inotify/: inotify_listener.cpp  inotify_listener.h
src/logging/: dualsink.cpp  logger.cpp
src/managers/: rulemanager.cpp  settingmanager.cpp
